game_sources = [
  'Weather/Weather.cpp',
  'OutdoorPvP/OutdoorPvPEP.cpp',
  'OutdoorPvP/OutdoorPvPSI.cpp',
  'OutdoorPvP/OutdoorPvP.cpp',
  'OutdoorPvP/OutdoorPvPMgr.cpp',
  'GMTickets/GMTicketMgr.cpp',
  'GMTickets/GMTicketHandler.cpp',
  'World/WorldStateVariableManager.cpp',
  'World/WorldStateExpression.cpp',
  'World/World.cpp',
  'World/WorldState.cpp',
  'Trade/TradeHandler.cpp',
  'Anticheat/module/Antispam/antispam.cpp',
  'Anticheat/module/Antispam/antispammgr.cpp',
  'Anticheat/module/config.cpp',
  'Anticheat/module/Warden/wardenmodule.cpp',
  'Anticheat/module/Warden/wardenmac.cpp',
  'Anticheat/module/Warden/wardenmodulemgr.cpp',
  'Anticheat/module/Warden/wardenscan.cpp',
  'Anticheat/module/Warden/wardenwin.cpp',
  'Anticheat/module/Warden/warden.cpp',
  'Anticheat/module/Warden/wardenscanmgr.cpp',
  'Anticheat/module/AddonHandler.cpp',
  'Anticheat/module/libanticheat.cpp',
  'Anticheat/module/anticheatchatcommandsfunctions.cpp',
  'Anticheat/module/Movement/movement.cpp',
  'BattleGround/BattleGroundMgr.cpp',
  'BattleGround/BattleGroundHandler.cpp',
  'BattleGround/BattleGround.cpp',
  'BattleGround/BattleGroundAV.cpp',
  'BattleGround/BattleGroundWS.cpp',
  'BattleGround/BattleGroundAB.cpp',
  'BattleGround/BattleGroundQueue.cpp',
  'Entities/SkillHandler.cpp',
  'Entities/MiscHandler.cpp',
  'Entities/QueryHandler.cpp',
  'Entities/Corpse.cpp',
  'Entities/ObjectGuid.cpp',
  'Entities/StatSystem.cpp',
  'Entities/Bag.cpp',
  'Entities/CharacterHandler.cpp',
  'Entities/Pet.cpp',
  'Entities/ItemHandler.cpp',
  'Entities/Relations.cpp',
  'Entities/NPCHandler.cpp',
  'Entities/CreatureLinkingMgr.cpp',
  'Entities/Taxi.cpp',
  'Entities/DynamicObject.cpp',
  'Entities/Totem.cpp',
  'Entities/PetHandler.cpp',
  'Entities/Object.cpp',
  'Entities/Transports.cpp',
  'Entities/GossipDef.cpp',
  'Entities/ItemEnchantmentMgr.cpp',
  'Entities/UpdateData.cpp',
  'Entities/EntitiesMgr.cpp',
  'Entities/GameObject.cpp',
  'Entities/Camera.cpp',
  'Entities/TemporarySpawn.cpp',
  'Entities/CreatureSettings.cpp',
  'Entities/PetitionsHandler.cpp',
  'Entities/Creature.cpp',
  'Entities/ObjectVisibility.cpp',
  'Entities/Item.cpp',
  'Entities/Unit.cpp',
  'Entities/Player.cpp',
  'Entities/UpdateFields.cpp',
  'GameEvents/GameEventMgr.cpp',
  'GameEvents/moon.cpp',
  'AI/ScriptDevAI/base/pet_ai.cpp',
  'AI/ScriptDevAI/base/guard_ai.cpp',
  'AI/ScriptDevAI/base/CombatAI.cpp',
  'AI/ScriptDevAI/base/BossAI.cpp',
  'AI/ScriptDevAI/base/follower_ai.cpp',
  'AI/ScriptDevAI/base/TimerAI.cpp',
  'AI/ScriptDevAI/base/escort_ai.cpp',
  'AI/ScriptDevAI/include/sc_grid_searchers.cpp',
  'AI/ScriptDevAI/include/sc_instance.cpp',
  'AI/ScriptDevAI/include/sc_creature.cpp',
  'AI/ScriptDevAI/system/ScriptLoader.cpp',
  'AI/ScriptDevAI/system/system.cpp',
  'AI/ScriptDevAI/ScriptDevAIMgr.cpp',
  'AI/BaseAI/GuardAI.cpp',
  'AI/BaseAI/CreatureAI.cpp',
  'AI/BaseAI/PetAI.cpp',
  'AI/BaseAI/GuardianAI.cpp',
  'AI/BaseAI/PossessedAI.cpp',
  'AI/BaseAI/TotemAI.cpp',
  'AI/BaseAI/UnitAI.cpp',
  'AI/BaseAI/GameObjectAI.cpp',
  'AI/BaseAI/NullCreatureAI.cpp',
  'AI/EventAI/CreatureEventAI.cpp',
  'AI/EventAI/CreatureEventAIMgr.cpp',
  'AI/CreatureAISelector.cpp',
  'AI/CreatureAIRegistry.cpp',
  'AI/PlayerAI/PlayerAI.cpp',
  'AI/PlayerAI/CharmAI.cpp',
  'Cinematics/M2Stores.cpp',
  'Cinematics/CinematicMgr.cpp',
  'Addons/AddonHandler.cpp',
  'DBScripts/ScriptMgr.cpp',
  'Maps/SpawnGroup.cpp',
  'Maps/GridMap.cpp',
  'Maps/Map.cpp',
  'Maps/SpawnManager.cpp',
  'Maps/MapDataContainer.cpp',
  'Maps/TaxiHandler.cpp',
  'Maps/InstanceData.cpp',
  'Maps/TransportMgr.cpp',
  'Maps/ObjectPosSelector.cpp',
  'Maps/MapManager.cpp',
  'Maps/MapPersistentStateMgr.cpp',
  'Maps/MapUpdater.cpp',
  'Quests/QuestDef.cpp',
  'Quests/QuestHandler.cpp',
  'MotionGenerators/IdleMovementGenerator.cpp',
  'MotionGenerators/PathFinder.cpp',
  'MotionGenerators/TargetedMovementGenerator.cpp',
  'MotionGenerators/HomeMovementGenerator.cpp',
  'MotionGenerators/PointMovementGenerator.cpp',
  'MotionGenerators/MovementHandler.cpp',
  'MotionGenerators/WrapperMovementGenerator.cpp',
  'MotionGenerators/MotionMaster.cpp',
  'MotionGenerators/MoveMap.cpp',
  'MotionGenerators/WaypointManager.cpp',
  'MotionGenerators/FollowerReference.cpp',
  'MotionGenerators/WaypointMovementGenerator.cpp',
  'MotionGenerators/MovementGenerator.cpp',
  'MotionGenerators/RandomMovementGenerator.cpp',
  'MotionGenerators/PathMovementGenerator.cpp',
  'Tools/CharacterDatabaseCleaner.cpp',
  'Tools/PlayerDump.cpp',
  'vmap/VMapManager2.cpp',
  'vmap/VMapFactory.cpp',
  'vmap/BIH.cpp',
  'vmap/DynamicTree.cpp',
  'vmap/ModelInstance.cpp',
  'vmap/WorldModel.cpp',
  'vmap/TileAssembler.cpp',
  'vmap/GameObjectModel.cpp',
  'vmap/MapTree.cpp',
  'Pools/PoolManager.cpp',
  'Guilds/Guild.cpp',
  'Guilds/GuildMgr.cpp',
  'Guilds/GuildHandler.cpp',
  'Chat/Level2.cpp',
  'Chat/Level1.cpp',
  'Chat/PetCommands.cpp',
  'Chat/ChannelMgr.cpp',
  'Chat/Level0.cpp',
  'Chat/debugcmds.cpp',
  'Chat/Channel.cpp',
  'Chat/ChatHandler.cpp',
  'Chat/Level3.cpp',
  'Chat/TicketCommands.cpp',
  'Chat/NpcCommands.cpp',
  'Chat/ChannelHandler.cpp',
  'Chat/Chat.cpp',
  'Globals/UnitCondition.cpp',
  'Globals/Locales.cpp',
  'Globals/Conditions.cpp',
  'Globals/GraveyardManager.cpp',
  'Globals/ObjectAccessor.cpp',
  'Globals/ObjectMgr.cpp',
  'Globals/CombatCondition.cpp',
  'AuctionHouse/AuctionHouseHandler.cpp',
  'AuctionHouse/AuctionHouseMgr.cpp',
  'AuctionHouseBot/AuctionHouseBot.cpp',
  'Combat/CombatHandler.cpp',
  'Combat/HostileRefManager.cpp',
  'Combat/DuelHandler.cpp',
  'Combat/CombatManager.cpp',
  'Combat/ThreatManager.cpp',
  'Loot/LootMgr.cpp',
  'Loot/LootHandler.cpp',
  'Spells/Scripts/SpellScript.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Paladin.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Priest.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Hunter.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Druid.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Rogue.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Warrior.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Warlock.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Shaman.cpp',
  'Spells/Scripts/Scripting/ClassScripts/Mage.cpp',
  'Spells/SpellHandler.cpp',
  'Spells/Spell.cpp',
  'Spells/SpellAuras.cpp',
  'Spells/UnitAuraProcHandler.cpp',
  'Spells/SpellMgr.cpp',
  'Spells/SpellTargets.cpp',
  'Spells/SpellDefines.cpp',
  'Spells/SpellEffects.cpp',
  'Groups/GroupHandler.cpp',
  'Groups/GroupReference.cpp',
  'Groups/Group.cpp',
  'Social/SocialMgr.cpp',
  'LFG/LFGQueue.cpp',
  'LFG/LFGMgr.cpp',
  'LFG/LFGHandler.cpp',
  'Server/SQLStorages.cpp',
  'Server/AuthCrypt.cpp',
  'Server/DBCStores.cpp',
  'Server/PacketLog.cpp',
  'Server/Opcodes.cpp',
  'Server/WorldSession.cpp',
  'Server/WorldSocket.cpp',
  'Grids/GridNotifiers.cpp',
  'Grids/ObjectGridLoader.cpp',
  'Grids/GridStates.cpp',
  'Movement/util.cpp',
  'Movement/packet_builder.cpp',
  'Movement/spline.cpp',
  'Movement/MoveSpline.cpp',
  'Movement/MoveSplineInit.cpp',
  'Accounts/AccountMgr.cpp',
  'Reputation/ReputationMgr.cpp',
  'Mails/MassMailMgr.cpp',
  'Mails/MailHandler.cpp',
  'Mails/Mail.cpp'
]

scriptdev_sources = [
  'AI/ScriptDevAI/scripts/battlegrounds/battlegrounds.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/instance_uldaman.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/uldaman.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/boss_archaedas.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stranglethorn_vale.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/arathi_highlands.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/westfall.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/loch_modan.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_dathrohan_balnazzar.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_baroness_anastari.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_maleki_the_pallid.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/stratholmeScripts.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_cannon_master_willey.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/stratholme.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/undercity.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/dun_morogh.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/burning_steppes.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/silverpine_forest.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/boss_jandice_barov.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/instance_scholomance.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/scholomance.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/boss_darkmaster_gandling.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/world_eastern_kingdoms.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/hinterlands.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/ironforge.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_patchwerk.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_heigan.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_anubrekhan.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_thaddius.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_noth.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_four_horsemen.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_gothik.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_sapphiron.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_gluth.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_maexxna.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_kelthuzad.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_faerlina.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_razuvious.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_loatheb.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/naxxramas.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_grobbulus.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/tirisfal_glades.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/boss_mr_smite.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/deadmines.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/instance_deadmines.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/swamp_of_sorrows.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_gyth.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/instance_blackrock_spire.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_pyroguard_emberseer.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_overlord_wyrmthalak.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/sunken_temple/sunken_templeScripts.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/sunken_temple/sunken_temple.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/shadowfang_keep.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/instance_shadowfang_keep.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/boss_kazzak.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/searing_gorge.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_ebonroc.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_flamegor.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_nefarian.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_chromaggus.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_broodlord_lashlayer.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_victor_nefarius.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_razorgore.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_firemaw.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_vaelastrasz.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/blackwing_lair.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/instance_scarlet_monastery.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_arcanist_doan.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_herod.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_mograine_and_whitemane.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/western_plaguelands.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/alterac_mountains.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_sulfuron_harbinger.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_magmadar.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_garr.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/molten_core.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/molten_coreScripts.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_shazzrah.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_gehennas.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_lucifron.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_majordomo_executus.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_baron_geddon.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_golemagg.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_ragnaros.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_ambassador_flamelash.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_high_interrogator_gerstahn.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/instance_blackrock_depths.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/blackrock_depths.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_general_angerforge.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_emperor_dagran_thaurissan.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/blasted_lands.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/wetlands.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/zulgurubScripts.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_jeklik.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_thekal.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_marli.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_mandokir.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_renataki.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/zulgurub.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_venoxis.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_hakkar.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_arlokk.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/stormwind_city.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/eastern_plaguelands.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/redridge_mountains.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/elwynn_forest.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/gnomeregan.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/boss_thermaplugg.cpp',
  'AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/instance_gnomeregan.cpp',
  'AI/ScriptDevAI/scripts/world/bosses_emerald_dragons.cpp',
  'AI/ScriptDevAI/scripts/world/guards.cpp',
  'AI/ScriptDevAI/scripts/world/npc_professions.cpp',
  'AI/ScriptDevAI/scripts/world/areatrigger_scripts.cpp',
  'AI/ScriptDevAI/scripts/world/npcs_special.cpp',
  'AI/ScriptDevAI/scripts/world/lunar_festival.cpp',
  'AI/ScriptDevAI/scripts/world/scourge_invasion.cpp',
  'AI/ScriptDevAI/scripts/world/world_map_scripts.cpp',
  'AI/ScriptDevAI/scripts/world/mob_generic_creature.cpp',
  'AI/ScriptDevAI/scripts/world/item_scripts.cpp',
  'AI/ScriptDevAI/scripts/world/spell_scripts.cpp',
  'AI/ScriptDevAI/scripts/world/war_effort.cpp',
  'AI/ScriptDevAI/scripts/world/go_scripts.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ashenvale.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/world_kalimdor.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/felwood.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/maraudon/boss_noxxion.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/maraudon/instance_maraudon.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/azshara.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/darkshore.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/feralas.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/stonetalon_mountains.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/blackfathom_deeps/instance_blackfathom_deeps.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/wailing_caverns/wailing_cavernsScripts.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/wailing_caverns/wailing_caverns.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/boss_azuregos.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/silithus.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_twinemperors.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/temple_of_ahnqiraj.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_skeram.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_cthun.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_huhuran.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_bug_trio.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_fankriss.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_ouro.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_viscidus.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_sartura.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/mob_anubisath_sentinel.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/razorfen_kraul/instance_razorfen_kraul.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/razorfen_kraul/razorfen_kraul.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/tanaris.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/ruins_of_ahnqirajScripts.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_moam.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_ossirian.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_ayamiss.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_rajaxx.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/ruins_of_ahnqiraj.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_kurinnaxx.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_buru.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/dustwallow_marsh.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/zulfarrak/instance_zulfarrak.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/zulfarrak/zulfarrak.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/zulfarrak/boss_zumrah.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/teldrassil.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/winterspring.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/boss_onyxia.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/instance_onyxias_lair.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/orgrimmar.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/durotar.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/razorfen_downs/instance_razorfen_downs.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/razorfen_downs/razorfen_downs.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/desolace.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/thousand_needles.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/ungoro_crater.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/mulgore.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/the_barrens.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/moonglade.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/thunder_bluff.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/dire_maul/instance_dire_maul.cpp',
  'AI/ScriptDevAI/scripts/kalimdor/dire_maul/dire_maul.cpp',
  'AI/ScriptDevAI/scripts/examples/example_escort.cpp',
  'AI/ScriptDevAI/scripts/examples/example_creature.cpp',
  'AI/ScriptDevAI/scripts/examples/example_misc.cpp',
  'AI/ScriptDevAI/scripts/examples/example_gossip_codebox.cpp'
]

playerbot_sources = [
  'PlayerBot/Base/PlayerbotClassAI.cpp',
  'PlayerBot/Base/PlayerbotMgr.cpp',
  'PlayerBot/Base/PlayerbotAI.cpp',
  'PlayerBot/AI/PlayerbotDruidAI.cpp',
  'PlayerBot/AI/PlayerbotWarlockAI.cpp',
  'PlayerBot/AI/PlayerbotMageAI.cpp',
  'PlayerBot/AI/PlayerbotPriestAI.cpp',
  'PlayerBot/AI/PlayerbotWarriorAI.cpp',
  'PlayerBot/AI/PlayerbotHunterAI.cpp',
  'PlayerBot/AI/PlayerbotRogueAI.cpp',
  'PlayerBot/AI/PlayerbotShamanAI.cpp',
  'PlayerBot/AI/PlayerbotPaladinAI.cpp'
]

game_inc_dirs = ['.', 'vmap', 'AuctionHouseBot', 'BattleGround', 'OutdoorPvP', 'PlayerBot']

if utfcpp_dep.found() == false
  game_inc_dirs = [game_inc_dirs, '../../dep/include/utf8cpp']
endif

if build_machine.system() == 'windows'
  game_inc_dirs = game_inc_dirs + ['../../dep/lib/include', '../../dep/lib/include/mysql']
endif

game_inc = include_directories(game_inc_dirs)

if get_option('BUILD_SCRIPTDEV')
  game_sources = [game_sources, scriptdev_sources]
endif

if get_option('BUILD_PLAYERBOT')
  game_sources = [game_sources, playerbot_sources]
  install_data('PlayerBot/playerbot.conf.dist.in', rename: 'playerbot.conf.dist', install_dir: 'etc')
endif

if not get_option('USE_ANTICHEAT')
  game_sources = [game_sources, './Anticheat/Anticheat.cpp']
else
  install_data('Anticheat/module/anticheat.conf.dist.in', rename: 'anticheat.conf.dist', install_dir: 'etc')
  install_subdir('Anticheat/module/warden_modules', install_dir : 'bin') # mydir subtree -> include/mydir
endif

if get_option('BUILD_AHBOT')
  install_data('AuctionHouseBot/ahbot.conf.dist.in', rename: 'ahbot.conf.dist', install_dir: 'etc')
endif

if not get_option('PCH')
  pch_files = []
else
  pch_files = ['../game/pchdef.h']
endif

game_args = ['-DDT_POLYREF64', '-D__ASSERT_MACROS_DEFINE_VERSIONS_WITHOUT_UNDERSCORES=0']

if get_option('BUILD_GAME_SERVER')
gamelib = static_library('game',
                        game_sources,
                        include_directories: [game_inc, global_includes],
                        dependencies: [zlib_dep, boost_dep, dblib_dep, utfcpp_dep],
                        link_with: [frameworklib, sharedlib, g3dlib, detourlib],
                        cpp_args: game_args,
                        cpp_pch: pch_files,
                        install : false
)
endif
